[project]
name = "InstantMesh"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Siddharth Ancha", email = "sancha@mit.edu"},
]
dependencies = [
    "torch>=2.1.0",
    "torchvision",
    "xformers>=0.0.25.post1",
    "pytorch-lightning",
    "gradio",
    "einops",
    "omegaconf",
    "torchmetrics",
    "webdataset",
    "trimesh",
    "rembg",
    "transformers",
    "diffusers",
    "imageio[ffmpeg]",
    "xatlas",
    "nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast",
    "Ninja>=1.11.1.1",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true
